--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/lodash": "4.14.172",
+    "lodash": "4.17.21",
     "nodemon": "2.0.12",
     "prettier": "2.3.2",
     "ts-node": "10.1.0"
